progs/tests/for_each/faulty_func_param_count.sy
f :: fn a:int, b:int {
    print a
    print b
}

start :: fn {
    [1, 2] -> for_each(f)
}

// error: _
